// Vitest Snapshot v1

exports[`molecules::AddressCard > renderes the address hash code. 1`] = `
<div
  class="mantine-Group-child mantine-2w2ufd"
>
  ASDASDQWEKOOQLMWEM
</div>
`;

exports[`molecules::AddressCard > renderes the address label. 1`] = `
<div
  class="mantine-Text-root mantine-DetailItem-label mantine-1ece26k"
>
  Primary Address
</div>
`;

exports[`molecules::AddressCard > renders without exploding 1`] = `
<DocumentFragment>
  <div
    class="mantine-Group-root mantine-chiw4t"
  >
    <div
      class="mantine-Stack-root mantine-DetailItem-root mantine-Group-child mantine-1a4fzbd"
    >
      <div
        class="mantine-Text-root mantine-DetailItem-label mantine-1ece26k"
      >
        Address label
      </div>
      <div
        class="mantine-Text-root mantine-DetailItem-content mantine-1tq817k"
      >
        <div
          class="mantine-Group-root mantine-1i932k4"
        >
          <div
            class="mantine-Group-child mantine-2w2ufd"
          >
            Address here
          </div>
          <div
            class="mantine-Group-root mantine-Group-child mantine-ze53qg"
          >
            <a
              class="mantine-Text-root mantine-Anchor-root mantine-Group-child mantine-odvvvx"
            >
              Copy
            </a>
            <a
              class="mantine-Text-root mantine-Anchor-root mantine-Group-child mantine-odvvvx"
            >
              QR
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
